--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         <activity android:name=".MenuActivity"/>
         <activity android:name=".PatoActivity"/>
         <activity android:name=".ConversorActivity"/>
+        <activity android:name=".TemperaturaActivity"/>
+        <activity android:name=".CEPActivity"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true" >
