--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".ConversorActivity"/>
         <activity android:name=".TemperaturaActivity"/>
         <activity android:name=".CEPActivity"/>
+        <activity android:name=".GatoActivity"/>
 
         <activity
             android:name=".MainActivity"
