--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+
 
     <application
         android:allowBackup="true"
@@ -21,6 +24,8 @@
         <activity android:name=".CEPActivity"/>
         <activity android:name=".GatoActivity"/>
         <activity android:name=".CarroActivity"/>
+        <activity android:name=".MercadoActivity"/>
+        <activity android:name=".CameraActivity"/>
 
         <activity
             android:name=".MainActivity"
