--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".CarroActivity"/>
         <activity android:name=".MercadoActivity"/>
         <activity android:name=".CameraActivity"/>
+        <activity android:name=".FuncionarioActivity"/>
 
         <activity
             android:name=".MainActivity"
